fixed contact css issue on mobile, footer issue

--- a/assets/style.css
+++ b/assets/style.css
@@ -10,16 +10,31 @@ body {
     font-style: normal;
     color: var(--body-color);
     overflow-x: hidden;
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    height: -webkit-fill-available;
   }
 
 body{
     margin: 0;
     padding: 0;
     background-color: black;
-
-
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    height: -webkit-fill-available;
 }
 
+main{
+  flex: 1;
+  overflow: scroll;
+}
+
+html{
+  height: -webkit-fill-available;
+
+}
 
 .logo {
     max-width: 20%;
@@ -69,7 +84,7 @@ body{
 }
 
 .metamask {
-    color: black;
+    color: #1E90FF;
     font-size: 15px;
     padding: 5px 7px;
     background-color: white;
@@ -80,7 +95,7 @@ body{
     position: relative;
     margin: 10% auto 0;
     width: 85%;
-    height: 450px;
+    height: 470px;
     background: linear-gradient(0deg, #121112, rgb(44, 43, 43));
 }
 
@@ -123,7 +138,7 @@ h2{
 }
 
 p.para2{
-    font-family: monospace;
+  font-family: monospace;
     font-size: 18px;
     color: white;
     text-align: left;
@@ -132,12 +147,12 @@ p.para2{
 }
 
 p.para3{
-    font-family: monospace;
-    font-size: 18px;
-    color: white;
-    text-align: right;
-    padding: 30px;
-    margin-right: 20px;
+  font-family: monospace;
+  font-size: 18px;
+  color: white;
+  text-align: right;
+  padding: 30px;
+  margin-right: 20px;
 }
 
 section.Teams{
@@ -332,7 +347,8 @@ section.Teams{
     -webkit-transition-duration: 0.3s;
     -webkit-transition-property: box-shadow, transform;
     margin-top: 50px;
-    margin-left: 50%;
+    margin-left: 10%;
+    margin-bottom: 20px;
 }
 
 .communitybtn:hover, .communitybtn:focus, .communitybtn:active{
@@ -346,7 +362,7 @@ section.Teams{
     font-size: 18px;
     margin-bottom: 35px;
     color: white;
-    margin-left: 270px;
+    margin-left: 99px;
   }
 
 /* ===== Webminer CSS ===== */
